--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Nodejs Project using nodejs methods",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -12,8 +14,13 @@
   "author": "jagadhiswaran Devaraj",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
 }
