Changes To controllers and routes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
-
+API_PORT=4001
 MONGO_URI= mongodb+srv://jagadhis:jaga1037@nodejs.rv2ek8e.mongodb.net/test
+TOKEN_KEY = "hellojdsahfjkadshflgasdglsdjkfh"
